--- a/debug_race_list_requests.html
+++ b/debug_race_list_requests.html
@@ -9,26 +9,26 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta name="viewport" content="width=1000">
 <meta name="format-detection" content="telephone=no" />
-<meta name="description" content="2025年11月16日のレース一覧です。JRA開催レースの出馬表や最新オッズ、レース結果速報、払戻情報をはじめ、競馬予想やデータ分析など予想に役立つ情報も満載です。" />
+<meta name="description" content="2023年10月29日のレース一覧です。JRA開催レースの出馬表や最新オッズ、レース結果速報、払戻情報をはじめ、競馬予想やデータ分析など予想に役立つ情報も満載です。" />
 <meta name="keywords" content="競馬,keiba,出馬表,オッズ,予想,レース結果,払戻し,結果速報,競馬予想,ネット競馬,netkeiba" />
 <meta name="thumbnail" content="https://www.netkeiba.com/style/netkeiba.ja/image/netkeiba.png" />
 <!-- ogp用 -->
 <meta property="og:site_name" content="netkeiba" />
 <meta property="og:type" content="article" />
-<meta property="og:title" content="レース一覧 | 2025年11月16日 レース情報(JRA) - netkeiba" />
-<meta property="og:url" content="https://race.netkeiba.com/top/race_list.html?kaisai_date=20251116" />
-<meta property="og:description" content="2025年11月16日のレース一覧です。JRA開催レースの出馬表や最新オッズ、レース結果速報、払戻情報をはじめ、競馬予想やデータ分析など予想に役立つ情報も満載です。" />
+<meta property="og:title" content="レース一覧 | 2023年10月29日 レース情報(JRA) - netkeiba" />
+<meta property="og:url" content="https://race.netkeiba.com/top/race_list.html?kaisai_date=20231029" />
+<meta property="og:description" content="2023年10月29日のレース一覧です。JRA開催レースの出馬表や最新オッズ、レース結果速報、払戻情報をはじめ、競馬予想やデータ分析など予想に役立つ情報も満載です。" />
 <meta property="og:image" content="https://www.netkeiba.com/style/netkeiba.ja/image/netkeiba.png" />
 <!-- Twitter用 -->
 <meta property="twitter:card" content="summary">
 <meta property="twitter:site" content="@netkeiba">
 <!-- Facebook用 -->
 <meta property="fb:admins" content="30367" />
-<link rel="canonical" href="https://race.netkeiba.com/top/race_list.html?kaisai_date=20251116" />
-<link rel="alternate" media="only screen and (max-width: 640px)" href="https://race.sp.netkeiba.com/?pid=race_list&kaisai_date=20251116" />
+<link rel="canonical" href="https://race.netkeiba.com/top/race_list.html?kaisai_date=20231029" />
+<link rel="alternate" media="only screen and (max-width: 640px)" href="https://race.sp.netkeiba.com/?pid=race_list&kaisai_date=20231029" />
 <link rel="alternate" type="application/rss+xml" href="https://rss.netkeiba.com?pid=rss_netkeiba&site=netkeiba" />
 <!-- アノテーション -->
-<title>レース一覧 | 2025年11月16日 レース情報(JRA) - netkeiba</title>
+<title>レース一覧 | 2023年10月29日 レース情報(JRA) - netkeiba</title>
 <!-- block=common__advertisement_taboola_head (d) -->
 <script type="text/javascript">
 window._taboola = window._taboola || [];
@@ -169,7 +169,7 @@ $('#gnavi_search_form').html(data.data);
 </ul>
 <div class="SiteToggleBtn01 Keirin">
 <a href="https://keirin.netkeiba.com/?rf=nk_pc_header">
-<span class="LiveRace">LIVE</span>
+
 <img src="https://cdn.netkeiba.com/img.www/style/netkeiba.ja/image/common/icon_keirin01.png" alt="" width="21" height="16" class="KeirinLogoMark01">競輪
 </a>
 </div><!-- /.SiteToggleBtn01 -->
@@ -805,9 +805,9 @@ My収支
 </div>
 </td><td>
 <div>
-<span class="Icon_Weather Weather02"></span>
-<span>|</span>
 <span class="Icon_Weather Weather01"></span>
+<span>|</span>
+<span class="Icon_Weather Weather02"></span>
 
 </div>
 </td><td>
@@ -875,7 +875,7 @@ My収支
 </div><!-- /.Wrap -->
 <footer>
 <!-- フッター -->
-<!-- block=common__race_footer (cp) -->
+<!-- block=common__race_footer (cg) -->
 <div class="NkFooterArea">
 <div class="BtnPagetop">
 <a href="javascript:void(0)" title="ページトップへ"></a>
